# nvfp4-pretrain

./: .gitignore  DEVLOG.md  FINDINGS.md  README.md  REPORT.md  SWEEP_LOG.md  bench_compile.py  cast_transpose_quant.py  config.yaml  nvfp4_cuda.py  nvfp4_train.py  profile_fp4.py  pyproject.toml  test_fp4linear.py  train.py
cutlass_gemm/: SHAPE_TUNING.md  build_splitk.sh  cutlass_ext.py  cutlass_nvfp4_ext.cu  nvfp4_gemm_bf16out_splitk.cu  roofline_shapes.py  test_parity.py
results/: p1_results.jsonl  p3_results.jsonl  slack1_bf16.jsonl  slack1_fp8.jsonl  slack1_nvfp4.jsonl  slack1_results.jsonl  slack4_results.jsonl  slack5_results.jsonl
scaling/: block_bench.py  block_bench_xl.py  maxsize.py  mfu_ceiling.py  plot_scaling_100M.py  plot_scaling_3prec.py  profile_fp8.py  profile_train.py  run_sweep_100M.sh  tput65.py  tput65b.py  train_text.py
tests/: ctq_bench.py  ctq_validate.py  ctq_wall.py
